--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,8 +9,8 @@
     "sourceMap": true,
     "target": "es5",
     "strictNullChecks": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
     "allowSyntheticDefaultImports": true,
     "jsx": "react",
   },
