--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,22 @@ services:
     ports:
       - 5432:5432
     restart: always
-    
+
+  web:
+      build: .
+      #    command: sh -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
+#      user: 1000:1000
+      volumes:
+        - .:/app:rw
+      ports:
+        - 3000:3000
+      depends_on:
+        - db
+        - elasticsearch
+        - redis
+      environment:
+        DB_HOST: db
+        ES_URL: elasticsearch:9200
+
 volumes:
     db-data-volume:
