--- a/package.json
+++ b/package.json
@@ -129,6 +129,7 @@
     "apollo": "^2.28.3",
     "enzyme": "3.8.0",
     "enzyme-adapter-react-16": "1.9.1",
+    "fishery": "^1.3.1",
     "jest": "^24.9.0",
     "prettier": "^1.19.1",
     "stylelint": "^9.10.1",
