--- a/config/database.yml
+++ b/config/database.yml
@@ -83,4 +83,4 @@ test:
 #     url: <%= ENV['DATABASE_URL'] %>
 #
 production:
-  url: <%= ENV['PRODUCTION_DATABASE_URL'] %>
+  url: <%= ENV['DATABASE_URL'] %>
