--- a/package.json
+++ b/package.json
@@ -13,28 +13,28 @@
     "@babel/polyfill": "^7.8.7",
     "@blueprintjs/core": "^3.22.3",
     "@blueprintjs/datetime": "^3.15.1",
-    "@ckeditor/ckeditor5-autoformat": "^21.0.0",
-    "@ckeditor/ckeditor5-basic-styles": "^21.0.0",
-    "@ckeditor/ckeditor5-core": "^21.0.0",
+    "@ckeditor/ckeditor5-autoformat": "^35.3.1",
+    "@ckeditor/ckeditor5-basic-styles": "^35.3.1",
+    "@ckeditor/ckeditor5-core": "^35.3.1",
     "@ckeditor/ckeditor5-dev-utils": "^23.2.0",
-    "@ckeditor/ckeditor5-editor-classic": "^21.0.0",
-    "@ckeditor/ckeditor5-essentials": "^21.0.0",
-    "@ckeditor/ckeditor5-heading": "^21.0.0",
-    "@ckeditor/ckeditor5-image": "^21.0.0",
-    "@ckeditor/ckeditor5-link": "^21.0.0",
-    "@ckeditor/ckeditor5-list": "^21.0.0",
-    "@ckeditor/ckeditor5-media-embed": "^21.0.0",
-    "@ckeditor/ckeditor5-paragraph": "^21.0.0",
-    "@ckeditor/ckeditor5-paste-from-office": "^21.0.0",
+    "@ckeditor/ckeditor5-editor-classic": "^35.3.1",
+    "@ckeditor/ckeditor5-essentials": "^35.3.1",
+    "@ckeditor/ckeditor5-heading": "^35.3.1",
+    "@ckeditor/ckeditor5-image": "^35.3.1",
+    "@ckeditor/ckeditor5-link": "^35.3.1",
+    "@ckeditor/ckeditor5-list": "^35.3.1",
+    "@ckeditor/ckeditor5-media-embed": "^35.3.1",
+    "@ckeditor/ckeditor5-paragraph": "^35.3.1",
+    "@ckeditor/ckeditor5-paste-from-office": "^35.3.1",
     "@ckeditor/ckeditor5-react": "^2.1.0",
-    "@ckeditor/ckeditor5-special-characters": "^21.0.0",
-    "@ckeditor/ckeditor5-table": "^21.0.0",
-    "@ckeditor/ckeditor5-theme-lark": "^21.0.0",
-    "@ckeditor/ckeditor5-typing": "^21.0.0",
-    "@ckeditor/ckeditor5-widget": "^21.0.0",
+    "@ckeditor/ckeditor5-special-characters": "^35.3.1",
+    "@ckeditor/ckeditor5-table": "^35.3.1",
+    "@ckeditor/ckeditor5-theme-lark": "^35.3.1",
+    "@ckeditor/ckeditor5-typing": "^35.3.1",
+    "@ckeditor/ckeditor5-widget": "^35.3.1",
     "@emotion/core": "^10.0.27",
     "@emotion/styled": "^10.0.27",
-    "@rails/webpacker": "4.2.0",
+    "@rails/webpacker": "^5.4.3",
     "@sentry/browser": "^4.6.6",
     "@types/classnames": "^2.2.9",
     "@types/enzyme": "^3.10.3",
@@ -73,7 +73,7 @@
     "emotion": "^9.2.12",
     "file-loader": "^1.1.11",
     "fishery": "^1.3.1",
-    "formik": "^1.5.8",
+    "formik": "^2.2.9",
     "graphql": "^14.5.8",
     "graphql-tag": "^2.10.1",
     "history": "^4.10.1",
@@ -114,18 +114,18 @@
     "regenerator-runtime": "^0.13.3",
     "rxjs": "^6.5.4",
     "slate": "^0.44.13",
-    "slate-plain-serializer": "^0.7.1",
+    "slate-plain-serializer": "0.7.11",
     "slate-react": "^0.21.24",
     "stimulus": "^1.1.1",
     "style-loader": "^1.0.0",
     "tippy.js": "^4.3.5",
-    "ts-jest": "^24.2.0",
+    "ts-jest": "^29.0.3",
     "ts-loader": "5.3.3",
     "typescript": "^4.3.2",
     "uuid": "^3.3.3",
     "webpack": "4.41.2",
     "whatwg-fetch": "^3.0.0",
-    "yup": "^0.26.10"
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@prettier/plugin-ruby": "^0.14.0",
@@ -133,10 +133,10 @@
     "apollo": "^2.28.3",
     "enzyme": "3.8.0",
     "enzyme-adapter-react-16": "1.9.1",
-    "jest": "^24.9.0",
+    "jest": "^29.3.1",
     "prettier": "^1.19.1",
-    "stylelint": "^9.10.1",
-    "stylelint-config-standard": "^18.3.0",
+    "stylelint": "^14.15.0",
+    "stylelint-config-standard": "^29.0.0",
     "stylelint-scss": "^3.13.0",
     "tslint": "^5.20.1",
     "tslint-plugin-prettier": "^2.1.0",
