--- a/config/webpacker.yml
+++ b/config/webpacker.yml
@@ -82,6 +82,12 @@ test:
   # Compile test packs to a separate directory
   public_output_path: packs-test
 
+staging:
+  <<: *default
+  compile: false
+  extract_css: true
+  cache_manifest: true
+
 production:
   <<: *default
 
@@ -93,6 +99,3 @@ production:
 
   # Cache manifest.json for performance
   cache_manifest: true
-
-staging:
-  <<: *production
