--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "node": ">=12.0.0 <16.0.0"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.5",
     "@babel/core": "^7.7.7",
     "@babel/polyfill": "^7.8.7",
     "@blueprintjs/core": "^3.22.3",
@@ -57,10 +58,6 @@
     "@types/yup": "^0.26.24",
     "activestorage": "^5.2.4",
     "anchorme": "^1.1.2",
-    "apollo-cache-inmemory": "^1.6.5",
-    "apollo-client": "^2.6.10",
-    "apollo-link": "^1.2.14",
-    "apollo-link-http": "^1.5.17",
     "babel-loader": "^8.0.6",
     "classlist-polyfill": "^1.2.0",
     "classnames": "^2.2.6",
@@ -89,7 +86,6 @@
     "query-string": "^6.9.0",
     "raw-loader": "^4.0.0",
     "react": "^16.12.0",
-    "react-apollo": "^3.1.5",
     "react-beautiful-dnd": "^7.1.3",
     "react-dom": "^16.12.0",
     "react-dropzone": "^4.3.0",
