--- a/package.json
+++ b/package.json
@@ -6,13 +6,11 @@
     "lint": "tslint 'app/javascript/**/*.{ts,tsx}'"
   },
   "engines": {
-    "node": ">=16.0.0 <18.0.0"
+    "node": ">=12.0.0 <16.0.0"
   },
   "dependencies": {
-    "@babel/core": "^7.20.12",
-    "@babel/polyfill": "^7.12.1",
-    "@babel/preset-env": "^7.20.2",
-    "@babel/preset-typescript": "^7.18.6",
+    "@babel/core": "^7.7.7",
+    "@babel/polyfill": "^7.8.7",
     "@blueprintjs/core": "^3.22.3",
     "@blueprintjs/datetime": "^3.15.1",
     "@ckeditor/ckeditor5-autoformat": "^21.0.0",
@@ -36,7 +34,7 @@
     "@ckeditor/ckeditor5-widget": "^21.0.0",
     "@emotion/core": "^10.0.27",
     "@emotion/styled": "^10.0.27",
-    "@rails/webpacker": "^5.4.3",
+    "@rails/webpacker": "4.2.0",
     "@sentry/browser": "^4.6.6",
     "@types/classnames": "^2.2.9",
     "@types/enzyme": "^3.10.3",
