--- a/package.json
+++ b/package.json
@@ -120,7 +120,7 @@
     "tippy.js": "^4.3.5",
     "ts-jest": "^24.2.0",
     "ts-loader": "5.3.3",
-    "typescript": "^4.3.2",
+    "typescript": "4.5.5",
     "uuid": "^3.3.3",
     "webpack": "^4.46.0",
     "whatwg-fetch": "^3.0.0",
