--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -103,9 +103,9 @@ jobs:
             bundle install
 
       # Database setup
-      - run: bin/rails db:create
-      - run: bin/rails db:schema:load
-      - run: bin/rails db:seed
+      - run: bundle exec rails db:create
+      - run: bundle exec rails db:schema:load
+      - run: bundle exec rails db:seed
 
       # Webpack setup
       - run: RAILS_ENV=test bin/webpack
