--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,59 +9,21 @@ jobs:
       # specify the version you desire here
       - image: cimg/ruby:3.1.3-node
         environment:
-          BUNDLE_PATH: vendor/bundle
           RAILS_ENV: test
 
     working_directory: /tmp/build
 
     steps:
       - checkout
-
       - run:
-          name: "Update Node.js"
-          command: |
-            curl -sSL "https://nodejs.org/dist/v16.16.0/node-v16.16.0-linux-x64.tar.xz" | sudo tar --strip-components=2 -xJ -C /usr/local/bin/ node-v16.16.0-linux-x64/bin/node
-
-      - run:
-          name: Check current version of node
-          command: node -v
-
-      # Download and cache dependencies
-      - restore_cache:
-          keys:
-            - v1-dependencies-{{ checksum "Gemfile.lock" }}
-            # fallback to using the latest cache if no exact match is found
-            - v1-dependencies-
-
-      - run:
-          name: install dependencies
-          command: |
-            bundle install
-
-      - save_cache:
-          paths:
-            - ./vendor/bundle
-          key: v1-dependencies-{{ checksum "Gemfile.lock" }}
-
-      - restore_cache:
-          keys:
-            - v2-yarn-dependencies-{{ checksum "yarn.lock" }}
-            # fallback to using the latest cache if no exact match is found
-            - v2-yarn-dependencies-
-
-      - run:
-          name: Yarn Install
-          command: yarn install
-
-      - save_cache:
-          paths:
-            - ~/.cache/yarn
-          key: v2-yarn-dependencies-{{ checksum "yarn.lock" }}
-
-      - persist_to_workspace:
-          root: /tmp
-          paths:
-             - build
+            name: "Update Node.js"
+            command: |
+              curl -sSL "https://nodejs.org/dist/v16.16.0/node-v16.16.0-linux-x64.tar.xz" | sudo tar --strip-components=2 -xJ -C /usr/local/bin/ node-v16.16.0-linux-x64/bin/node
+      - ruby/install-deps
+      # Store bundle cache
+      - node/install-packages:
+          pkg-manager: yarn
+          cache-key: "yarn.lock"
 
   test-job:
     docker:
@@ -69,7 +31,6 @@ jobs:
         environment:
           DB_HOST: localhost
           DB_USERNAME: circleci-demo-go
-          BUNDLE_PATH: vendor/bundle
           RAILS_ENV: test
 
       - image: cimg/postgres:9.6
@@ -85,8 +46,11 @@ jobs:
     working_directory: /tmp/build
 
     steps:
-      - attach_workspace:
-          at: /tmp
+      - checkout
+      - ruby/install-deps
+      - node/install-packages:
+          pkg-manager: yarn
+          cache-key: "yarn.lock"
 
       - run:
           name: "Update Node.js"
@@ -94,13 +58,8 @@ jobs:
             curl -sSL "https://nodejs.org/dist/v16.16.0/node-v16.16.0-linux-x64.tar.xz" | sudo tar --strip-components=2 -xJ -C /usr/local/bin/ node-v16.16.0-linux-x64/bin/node
 
       - run:
-          name: Check current version of node
-          command: node -v
-
-      - run:
-          name: install dependencies
-          command: |
-            bundle install
+          name: Wait for DB
+          command: dockerize -wait tcp://localhost:5432 -timeout 1m
 
       # Database setup
       - run: bundle exec rails db:create
@@ -110,10 +69,8 @@ jobs:
       # Webpack setup
       - run: RAILS_ENV=test bin/webpack
 
-      # run rubocop
-      - run:
-          name: Run rubocop
-          command: bundle exec rubocop
+      - ruby/rspec-test
+      - ruby/rubocop-check
 
       # run eslint
       - run:
@@ -124,19 +81,9 @@ jobs:
           name: Run TypeScript compiler
           command: yarn run tsc --noEmit
 
-      # run tests!
-      - run:
-          name: run tests
-          command: |
-            bundle exec rake test
-
-      - store_artifacts:
-          path: /tmp/test-results
-          destination: test-results
-
 workflows:
   version: 2
-  build-test-hold-deploy:
+  build-and-test:
     jobs:
       - build-job
 
