--- a/config/database.yml
+++ b/config/database.yml
@@ -83,6 +83,10 @@ test:
 #     url: <%= ENV['DATABASE_URL'] %>
 #
 staging:
+  adapter: postgresql
+  encoding: unicode
   url: <%= ENV['DATABASE_URL'] %>
 production:
+  adapter: postgresql
+  encoding: unicode
   url: <%= ENV['DATABASE_URL'] %>
